# simpplr

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: django.yml
fixtures/: languageModel.json
fixtures/test/: movieModel.json
simpplr/: .env  asgi.py  exemption_handler.py  settings.py  urls.py  utils.py  wsgi.py
tasks/: models.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_moviemodel_delete_movie.py  0003_remove_moviemodel_image.py  0004_alter_moviemodel_release_year.py  0005_alter_moviemodel_language.py  0006_alter_moviemodel_language.py
